force-app/main/default/objects/XactlyExpress__XCView__c/XactlyExpress__XCView__c.object-meta.xml
<CustomObject>
    <label>XCView</label>
    <nameField>
        <label>XCView Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>XCView</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>