force-app/main/default/objects/XactlyExpress__XCView__c/fields/XactlyExpress__CustomizePayView__c.field-meta.xml
<CustomField>
    <fullName>XactlyExpress__CustomizePayView__c</fullName>
    <description>Column format to configure the payments table
{!columnName} = [{!isDisplayed}, {!columnOrder}];</description>
    <label>CustomizePayView</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>