force-app/main/default/objects/XactlyExpress__XCView__c/fields/XactlyExpress__IsAdvancedFormula__c.field-meta.xml
<CustomField>
    <fullName>XactlyExpress__IsAdvancedFormula__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field defines if advanced formula field is defined</description>
    <label>IsAdvancedFormula</label>
    <type>Checkbox</type>
</CustomField>