force-app/main/default/objects/XactlyExpress__XCView__c/fields/XactlyExpress__PayeeStatus__c.field-meta.xml
<CustomField>
    <fullName>XactlyExpress__PayeeStatus__c</fullName>
    <description>This field store the kind of payees that must be displayed for the hold views</description>
    <label>PayeeStatus</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>HOLDS_ALL_PAYEES</fullName>
            </value>
            <value>
                <fullName>HOLDS_ACTIVE_PAYEES</fullName>
                <default>true</default>
                <label>HOLDS_ACTIVE_PAYEES</label>
            </value>
            <value>
                <fullName>HOLDS_INACTIVE_PAYEES</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>