force-app/main/default/objects/XactlyExpress__XCView__c/fields/XactlyExpress__Permissions__c.field-meta.xml
<CustomField>
    <fullName>XactlyExpress__Permissions__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Permissions</label>
    <type>Checkbox</type>
</CustomField>