force-app/main/default/objects/XactlyExpress__XCView__c/fields/XactlyExpress__ProfileId__c.field-meta.xml
<CustomField>
    <fullName>XactlyExpress__ProfileId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ProfileId</label>
    <referenceTo>XactlyExpress__XCProfile__c</referenceTo>
    <relationshipLabel>XCView</relationshipLabel>
    <relationshipName>XCView</relationshipName>
    <type>Lookup</type>
</CustomField>