force-app/main/default/objects/XactlyExpress__XCView__c/fields/XactlyExpress__RowLimit__c.field-meta.xml
<CustomField>
    <fullName>XactlyExpress__RowLimit__c</fullName>
    <label>RowLimit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>