force-app/main/default/objects/XactlyExpress__XCView__c/fields/XactlyExpress__Section__c.field-meta.xml
<CustomField>
    <fullName>XactlyExpress__Section__c</fullName>
    <label>Section</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>