force-app/main/default/objects/XactlyExpress__XCView__c/fields/XactlyExpress__Visibility__c.field-meta.xml
<CustomField>
    <fullName>XactlyExpress__Visibility__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Visibility</label>
    <type>Checkbox</type>
</CustomField>